--- a/index.html
+++ b/index.html
@@ -4,6 +4,13 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=">
   <title>ADARSH</title>
+  <style>
+      body
+      {
+          background-color: aqua;
+          color: brown;
+      }
+  </style>   
 </head>
 <body>
   <h1>About Me</h1>
