--- a/pages/practical-2.html
+++ b/pages/practical-2.html
@@ -1,18 +1,13 @@
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=">
-  <title>ADARSH</title>
-  <style>
-      body
-      {
-          background-color: rgb(252, 245, 152);
-          color: rgb(88, 9, 9);
-      }
-  </style>   
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
 </head>
 <body>
+    <p style="color: rgb(16, 85, 53);">Practical-2:- Live your first web page on github. </p>
   <h1>WELCOME TO FULLSTACK COURSE</h1>
   <h2>About HTML</h2>
   <p>HTML stands for Hypertext Markup Language, and it is the most widely used language to write Web Pages.
@@ -21,13 +16,5 @@
     Thus, the link available on a webpage is called Hypertext.
     As its name suggests, HTML is a Markup Language which means you use HTML to simply "mark-up" 
     a text document with tags that tell a Web browser how to structure it to display. </p>
-  <a href="pages/practical-1.html">practical-1</a>
-  <br>
-  <a href="pages/practical-2.html">practical-2</a>
-  <br>
-  <a href="pages/practical-3.html">practical-3</a>
-  <br>
-  <a href="pages/practical-4.html">practical-4</a>
-  
 </body>
 </html>
