--- a/pages/practical-4.html
+++ b/pages/practical-4.html
@@ -13,6 +13,8 @@
   </style>   
 </head>
 <body>
+    <p>Practical-4:- Create a website having list of all the practicals and their individual 
+        practical pages links.</p>
   <h1>WELCOME TO FULLSTACK COURSE</h1>
   <h2>About HTML</h2>
   <p>HTML stands for Hypertext Markup Language, and it is the most widely used language to write Web Pages.
