--- a/index.html
+++ b/index.html
@@ -13,21 +13,22 @@
   </style>   
 </head>
 <body>
-  <h1>WELCOME TO FULLSTACK COURSE</h1>
-  <h2>About HTML</h2>
+  <h1 style="color: green;">WELCOME TO FULLSTACK COURSE</h1>
+  <h2 style="color: green;">About HTML</h2>
   <p>HTML stands for Hypertext Markup Language, and it is the most widely used language to write Web Pages.
 
     Hypertext refers to the way in which Web pages (HTML documents) are linked together.
     Thus, the link available on a webpage is called Hypertext.
     As its name suggests, HTML is a Markup Language which means you use HTML to simply "mark-up" 
     a text document with tags that tell a Web browser how to structure it to display. </p>
-  <a href="pages/practical-1.html">practical-1</a>
-  <br>
-  <a href="pages/practical-2.html">practical-2</a>
-  <br>
-  <a href="pages/practical-3.html">practical-3</a>
-  <br>
-  <a href="pages/practical-4.html">practical-4</a>
-  
+
+    <ol>
+      <li>Practical-1:- Create a Web page including 
+        HTML basic skeleton using offline HTML editor and online sandbox environment. <a href="pages/practical-1.html">practical-1</a></li>
+      <li>Practical-2:- Live your first web page on github. <a href="pages/practical-2.html">practical-2</a></li>
+      <li>practical-3 :- Create a web page showing a basic HTML structure using character entities and span tag. <a href="pages/practical-3.html">practical-3</a></li>
+      <li>Practical-4:- Create a website having list of all the practicals and their individual 
+        practical pages links. <a href="pages/practical-4.html">practical-4</a></li>
+  </ol>
 </body>
 </html>
