--- a/pages/practical-2.html
+++ b/pages/practical-2.html
@@ -6,8 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
-<body>
-    <p style="color: rgb(16, 85, 53);">Practical-2:- Live your first web page on github. </p>
+<body style="background-color: rgb(191, 231, 131);">
+    <p style="color: rgb(131, 49, 35); font-size: larger; font-style: italic;">Practical-2:- Live your first web page on github. </p>
   <h1>WELCOME TO FULLSTACK COURSE</h1>
   <h2>About HTML</h2>
   <p>HTML stands for Hypertext Markup Language, and it is the most widely used language to write Web Pages.
@@ -16,5 +16,8 @@
     Thus, the link available on a webpage is called Hypertext.
     As its name suggests, HTML is a Markup Language which means you use HTML to simply "mark-up" 
     a text document with tags that tell a Web browser how to structure it to display. </p>
+    <h3>Output</h3>
+<h4 align="center">Live Web page on github</h4> 
+<img src="../images/practical 2 live web page.PNG" alt="practical-2 img" title="live web page image on github">
 </body>
 </html>
