--- a/pages/practical-3.html
+++ b/pages/practical-3.html
@@ -1,3 +1,28 @@
-<h3>Output</h3>
-<h4 align="center">Live Web page on github</h4> 
-<img src="../images/practical 1 offline.PNG" alt="practical-1 img" title="image of offline HTML editor">
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
+</head>
+<body style="background-color: rgb(194, 226, 146);">
+    <p style="color: rgb(128, 26, 26); font-style: italic; font-size: larger;">practical-3 :- Create a web page showing a basic HTML structure using character entities and span tag.</p>
+    <code>
+        <pre>
+            &lt;!DOCTYPE <span style="color: brown;">html</span>&gt;
+            &lt;html <span style="color: brown;">lang</span> =<span style="color: blue;">&quot;en&quot;</span>
+            &lt;head&gt;
+                &lt;meta <span style="color: brown;">charset</span> = <span style="color: blue;">&quot; UTF-8&quot;</span>
+                &lt;meta <span style="color: brown;">name</span> =&quot;viewport&quot; <span style="color: brown;">content</span> = <span style="color: blue;">&quot;width=device-width, initial-scale=1.0&quot;</span> &gt;
+                &lt;title&gt;Document&lt;/title&gt;
+            &lt;/head&gt; 
+            &lt;body&gt;
+                <span style="color: green;">&lt;-- HTMLcomment --&gt;</span> 
+            &lt;/body&gt;
+            &lt;/html&gt;
+
+
+        </pre>
+    </code>
+</body>
+</html>
