--- a/pages/practical-1.html
+++ b/pages/practical-1.html
@@ -5,8 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
-<body>
-    <p>Practical-1:- Create a Web page including 
+<body style="background-color: rgb(200, 233, 150);">
+    <p style="color: rgb(105, 25, 25); font-size: large; font-style: italic;">Practical-1:- Create a Web page including 
         HTML basic skeleton using offline HTML editor and online sandbox environment. </p>
   <h1>WELCOME TO FULLSTACK COURSE</h1>
   <h2>About HTML</h2>
@@ -17,10 +17,10 @@
     As its name suggests, HTML is a Markup Language which means you use HTML to simply "mark-up" 
     a text document with tags that tell a Web browser how to structure it to display. </p>
     <h3>Output</h3>
-    <h4 align="center">Offline HTML editor</h4>
+    <h3 align="center">Offline HTML editor</h3>
     <img src="../images/practical 1 offline.PNG" alt="practical-1 img" title="image of offline HTML editor">
     <br>
-    <h5 align="center">Online HTML editor</h5>
+    <h3 align="center">Online HTML editor</h3>
     <img src="../images/practical 1 online.PNG" alt="practical-1 img" title="image of online HTML editor">
 </body>
 </html>
