--- a/pages/practical-4.html
+++ b/pages/practical-4.html
@@ -26,11 +26,11 @@
 
     <ol>
         <li>Practical-1:- Create a Web page including 
-          HTML basic skeleton using offline HTML editor and online sandbox environment. <a href="pages/practical-1.html">practical-1</a></li>
-        <li>Practical-2:- Live your first web page on github. <a href="pages/practical-2.html">practical-2</a></li>
-        <li>practical-3 :- Create a web page showing a basic HTML structure using character entities and span tag. <a href="pages/practical-3.html">practical-3</a></li>
+          HTML basic skeleton using offline HTML editor and online sandbox environment. <a href="../pages/practical-1.html">practical-1</a></li>
+        <li>Practical-2:- Live your first web page on github. <a href="../pages/practical-2.html">practical-2</a></li>
+        <li>practical-3 :- Create a web page showing a basic HTML structure using character entities and span tag. <a href="../pages/practical-3.html">practical-3</a></li>
         <li>Practical-4:- Create a website having list of all the practicals and their individual 
-          practical pages links. <a href="pages/practical-4.html">practical-4</a></li>
+          practical pages links. <a href="../pages/practical-4.html">practical-4</a></li>
     </ol>
 </body>
 </html>
