--- a/pages/practical-1.html
+++ b/pages/practical-1.html
@@ -18,9 +18,9 @@
     a text document with tags that tell a Web browser how to structure it to display. </p>
     <h3>Output</h3>
     <h3 align="center">Offline HTML editor</h3>
-    <img src="../images/practical 1 offline.PNG" alt="practical-1 img" title="image of offline HTML editor">
+    <img src="../images/practical 1 offline.PNG" alt="practical-1 img" title="image of offline HTML editor" style="width: 80%; display: block; margin-left: auto; margin-right: auto;">
     <br>
     <h3 align="center">Online HTML editor</h3>
-    <img src="../images/practical 1 online.PNG" alt="practical-1 img" title="image of online HTML editor">
+    <img src="../images/practical 1 online.PNG" alt="practical-1 img" title="image of online HTML editor" style="width: 80%; display: block; margin-left: auto; margin-right: auto;">
 </body>
 </html>
