--- a/index.html
+++ b/index.html
@@ -21,6 +21,9 @@
     Thus, the link available on a webpage is called Hypertext.
     As its name suggests, HTML is a Markup Language which means you use HTML to simply "mark-up" 
     a text document with tags that tell a Web browser how to structure it to display. </p>
+    <br>
+    <br>
+    <h4>List of practicals</h4>
 
     <ol>
       <li>Practical-1:- Create a Web page including 
