--- a/pages/practical-2.html
+++ b/pages/practical-2.html
@@ -18,6 +18,6 @@
     a text document with tags that tell a Web browser how to structure it to display. </p>
     <h3>Output</h3>
 <h4 align="center">Live Web page on github</h4> 
-<img src="../images/practical 2 live web page.PNG" alt="practical-2 img" title="live web page image on github">
+<img src="../images/practical 2 live web page.PNG" alt="practical-2 img" title="live web page image on github" style="width: 80%; display: block; margin-left: auto; margin-right: auto;">
 </body>
 </html>
