--- a/pages/practical-3.html
+++ b/pages/practical-3.html
@@ -7,6 +7,7 @@
 </head>
 <body style="background-color: rgb(194, 226, 146);">
     <p style="color: rgb(128, 26, 26); font-style: italic; font-size: larger;">practical-3 :- Create a web page showing a basic HTML structure using character entities and span tag.</p>
+    <h3>Output</h3>
     <code>
         <pre>
             &lt;!DOCTYPE <span style="color: brown;">html</span>&gt;
@@ -18,6 +19,7 @@
             &lt;/head&gt; 
             &lt;body&gt;
                 <span style="color: green;">&lt;-- HTMLcomment --&gt;</span> 
+                Write your content here....
             &lt;/body&gt;
             &lt;/html&gt;
 
