--- a/index.html
+++ b/index.html
@@ -32,6 +32,7 @@
       <li>practical-3 :- Create a web page showing a basic HTML structure using character entities and span tag. <a href="pages/practical-3.html">practical-3</a></li>
       <li>Practical-4:- Create a website having list of all the practicals and their individual 
         practical pages links. <a href="pages/practical-4.html">practical-4</a></li>
+      <li>Practical-5:- Create a webpage Implimenting image mapping. <a href="pages/practical-5.html">practical-5</a> </li>
   </ol>
 </body>
 </html>
