--- a/pages/CSSpage.html
+++ b/pages/CSSpage.html
@@ -13,7 +13,7 @@
     <img src="../images/CSS.jpg" alt="image CSS" width="400" height="200">
     <br>
     <br>
-    <div style="text-align: left; background-color: grey;"><p>
+    <div style="text-align: left; background-color: grey; margin-left: 10px; margin-right: 10px; padding-left: 5px; padding-right: 5px; display: block;"><p>
         1-CSS stands for Cascading Style Sheets
         <br>
         2-CSS describes how HTML elements are to be displayed on screen, paper, or in other media
