--- a/pages/HTMLpage.html
+++ b/pages/HTMLpage.html
@@ -13,7 +13,7 @@
     <img src="../images/html.png" alt="image HTML" width="400" height="200">
     <br>
     <br>
-    <div style="text-align: inherit; background-color: grey;"><p>HTML is a markup language which is used by the browser to manipulate text, 
+    <div style="text-align: center; background-color: grey; margin-left: 10px; margin-right: 10px; padding-left: 5px; padding-right: 5px; display: block;"><p>HTML is a markup language which is used by the browser to manipulate text, 
         images and other content to display it in required format.
          HTML was created by Tim Berners-Lee in 1991. The first ever version of HTML was HTML 1.0 but the first 
         standard version was HTML 2.0 which was published in 1999.
