--- a/pages/BootstrapPage.html
+++ b/pages/BootstrapPage.html
@@ -13,7 +13,8 @@
     <img src="../images/bootstrap.jpeg" alt="image bootstrap" width="400" height="200">
     <br>
     <br>
-    <div style="text-align: center; background-color: grey; margin-left: 10px; margin-right: 10px; padding-left: 5px; padding-right: 5px; display: block;"><p> Bootstrap is a free and open-source tool collection for creating responsive websites and web applications. 
+    <div style="text-align: justify; background-color: grey; border-radius: 10px ; margin-left: 10px; margin-right: 10px; padding-left: 5px; padding-right: 5px; display: block;">
+        <p style="margin-left: 25px; margin-right: 25px;"> Bootstrap is a free and open-source tool collection for creating responsive websites and web applications. 
         It is the most popular HTML, CSS, and JavaScript framework for developing responsive, 
         mobile-first web sites. It solves many problems which we had once, one of which is the 
         cross-browser compatibility issue. Nowadays, the websites are perfect for all the browsers 
