--- a/index.html
+++ b/index.html
@@ -33,6 +33,7 @@
       <li>Practical-4:- Create a website having list of all the practicals and their individual 
         practical pages links. <a href="pages/practical-4.html">practical-4</a></li>
       <li>Practical-5:- Create a webpage Implimenting image mapping. <a href="pages/practical-5.html">practical-5</a> </li>
+      <li>Practical-6:- Create Following Layout using CSS Layout Properties. <a href="pages/practical-6.html">Practical-6</a></li>
   </ol>
 </body>
 </html>
