--- a/pages/Node js page.html
+++ b/pages/Node js page.html
@@ -13,7 +13,8 @@
     <img src="../images/node js.jpg" alt="image Node JS" width="400" height="200">
     <br>
     <br>
-    <div style="text-align: center; background-color: grey; margin-left: 10px; margin-right: 10px; padding-left: 5px; padding-right: 5px; display: block;"><p> Node.js is an open source and cross-platform runtime environment for executing JavaScript
+    <div style="text-align: justify; background-color: grey; border-radius: 10px ; margin-left: 10px; margin-right: 10px; padding-left: 5px; padding-right: 5px; display: block;">
+        <p style="margin-left: 25px; margin-right: 25px;"> Node.js is an open source and cross-platform runtime environment for executing JavaScript
          code outside of a browser. You need to remember that NodeJS is not a framework and it’s 
          not a programming language. Most of the people are confused and understand it’s a framework 
          or a programming language. We often use Node.js for building back-end services like APIs like
