--- a/pages/practical-4.html
+++ b/pages/practical-4.html
@@ -7,7 +7,7 @@
   <style>
       body
       {
-          background-color: rgb(252, 245, 152);
+          background-color: rgb(200, 230, 150);
           color: rgb(88, 9, 9);
       }
   </style>   
@@ -31,6 +31,8 @@
         <li>practical-3 :- Create a web page showing a basic HTML structure using character entities and span tag. <a href="../pages/practical-3.html">practical-3</a></li>
         <li>Practical-4:- Create a website having list of all the practicals and their individual 
           practical pages links. <a href="../pages/practical-4.html">practical-4</a></li>
+          <li>Practical-5:- Create a webpage Implimenting image mapping. <a href="../pages/practical-5.html">practical-5</a> </li>
+      <li>Practical-6:- Create Following Layout using CSS Layout Properties. <a href="../pages/practical-6.html">Practical-6</a></li>
     </ol>
 </body>
 </html>
