--- a/pages/practical-6.html
+++ b/pages/practical-6.html
@@ -10,7 +10,7 @@
   <p style="color: rgb(105, 25, 25); font-size: large; font-style: italic; text-align: left;">Practical-6: Create Following Layout using CSS Layout Properties. </p>
 
   <div class="card">
-    <img class="images" src="../images/HTML.png" alt="">
+    <img class="images" src="../images/html.png" alt="">
     <h3 class="title">Introduction to HTML</h3>
     <p style="text-align: justify;">
       HTML stands for Hypertext Markup Language, and it is the most widely used language to write Web Pages.
