--- a/index.html
+++ b/index.html
@@ -35,6 +35,7 @@
       <li>Practical-5:- Create a webpage Implimenting image mapping. <a href="pages/practical-5.html">practical-5</a> </li>
       <li>Practical-6:- Create Following Layout using CSS Layout Properties. <a href="pages/practical-6.html">Practical-6</a></li>
       <li>Practical-7:- Create a Web Page Layout using div tags. <a href="pages/practical-7.html">Practical-7</a></li>
+      <li>Practical-8:- Create a Web Page Layout using div tags and navigation bar. <a href="pages/practical-8.html">Practical-8</a></li>
   </ol>
 </body>
 </html>
