--- a/pages/practical-8.html
+++ b/pages/practical-8.html
@@ -126,10 +126,18 @@
       margin: 0;
       padding: 0;
     }
+    p {
+      margin-bottom: 15px;
+      padding: 5px;
+      color: #595238;
+      font-size: 20px;
+      overflow: auto;
+    }
 
     #container {
       /* width: 95%; */
       margin: 0px;
+      padding: 50px;
     }
 
 
@@ -137,22 +145,24 @@
       background-color: rgb(207, 219, 37);
       display: flex;
       justify-content: center;
-      align-items: center;
-      height: 90px;
-      margin-bottom: 10px;
+      margin-bottom: 5px;
       position: fixed;
       top: 0;
-      z-index: 1030;
-      width: 100%;
+      width: 94.1%;
+      padding: 10px;
+      overflow: hidden;
     }
 
     .nav {
       text-decoration: none;
       color: #fff;
-      padding-left: 70px;
+      text-align: center;
+      /* padding-left: 70px;
       padding-right: 60px;
       padding-top: 18px;
-      padding-bottom: 18px;
+      padding-bottom: 18px; */
+      padding: 20px;
+      width: 100%;
       background-color: #40a794;
     }
 
@@ -162,14 +172,16 @@
     }
 
     #section1{
-      height: 100px;
+      margin-top: 10px;
+      height: 35px;
     }
 
     #practical-title {
       background-image: url('../images/header.jpg');
-      height: 815px;
+      height: 780px;
       text-align: center;
-      background-size: cover;
+      background-size: 100%;
+      background-position: 50%;
       background-repeat: no-repeat;
 
     }
@@ -177,23 +189,24 @@
     h1 {
       font-size: 4rem;
       color: #fff;
-      padding: 20px;
+      padding: 30px;
+      top: 0;
     }
 
     #team-members-container {
       text-align: center;
-      padding-top: 156px;
+      padding-top: 100px;
       width: 100%;
     }
 
     .person-image {
-      width: 200px;
-      height: 200px;
+      width: 220px;
+      height: 220px;
       border-radius: 50%;
       background-color: #a6feff;
-      display: inline;
+      display: inline-block;
       padding: 30px;
-      margin: 30px 5px 0px 5px;
+      margin: 30px 12px 0px 12px;
     }
 
     #about-container {
@@ -215,7 +228,7 @@
       padding: 15px;
       float: left;
       text-align: justify;
-      line-height: 2.5;
+      line-height: 2.0;
     }
 
     #about-right {
@@ -256,13 +269,12 @@
     }
 
     .tech {
-      height: 500px;
-      width: 19%;
+      height: 600px;
+      width: 20%;
       background-color: #a6feff;
-      line-height: 1.8;
+      line-height: 1.5;
       display: inline-block;
-      margin-right: 20px;
-      margin-left: 20px;
+      margin: 15px;
     }
 
     .tech-images {
@@ -277,13 +289,6 @@
       color: black;
     }
 
-    p {
-      margin-bottom: 15px;
-      padding: 5px;
-      color: #595238;
-      font-size: 14;
-    }
-
     .button {
       background-color: red;
       padding: 10px 60px;
@@ -296,6 +301,7 @@
 
     .button:hover {
       background-color: #3e8e41;
+      animation-direction: alternate;
     }
 
     #contact-container {
@@ -317,6 +323,587 @@
     #copyright-titile{
       color: black;
     }
+
+    @media screen and (max-width: 1350px){
+      p {
+      margin-bottom: 15px;
+      padding: 5px;
+      color: #595259;
+      font-size: 20px;
+      overflow: auto;
+    }
+      #container {
+      /* width: 95%; */
+      margin: 0px;
+      padding: 0px;
+    }
+    #header {
+      background-color: rgb(207, 219, 37);
+      display: flex;
+      justify-content: center;
+      position: fixed;
+      top: 0;
+      width: 100%;
+      overflow: hidden;
+    }
+
+    .nav {
+      text-decoration: none;
+      color: #fff;
+      text-align: center;
+      /* padding-left: 70px;
+      padding-right: 60px;
+      padding-top: 18px;
+      padding-bottom: 18px; 
+      padding: 20px;*/
+      width: 100%;
+      background-color: rgb(207, 219, 37);
+    }
+
+    .nav:hover {
+      background-color: white;
+      color: black;
+    }
+    #section1{
+      margin-top: 20px;
+      height: 40px;
+    }
+
+    #practical-title {
+      background-image: url('../images/header.jpg');
+      height: 680px;
+      text-align: center;
+      background-size: 100%;
+      background-position: 50%;
+      background-repeat: no-repeat;
+
+    }
+
+    h1 {
+      font-size: 4rem;
+      color: #fff;
+      padding: 30px;
+    }
+
+    #team-members-container {
+      text-align: center;
+      padding-top: 100px;
+      width: 100%;
+    }
+
+    .person-image {
+      width: 360px;
+      height: 360px;
+      border-radius: 50%;
+      background-color: #a6feff;
+      display: inline-block;
+      padding: 40px;
+      margin: 30px 10px 0px 10px;
+    }
+
+    #about-container {
+      text-align: center;
+      padding-top: 80px;
+    }
+
+    #about-container::after {
+      content: '';
+      display: block;
+      clear: both;
+    }
+
+    #about-left {
+      width: 96%;
+      height: 600px;
+      background-color: #e97171;
+      color: #fff;
+      padding: 15px;
+      float: left;
+      text-align: justify;
+      line-height: 2.5;
+    }
+
+    #about-right {
+      float: right;
+      width: 100%;
+      height: 600px;
+      text-align: center;
+    }
+
+    h3 {
+      font-size: 2.7rem;
+      margin-top: 40px;
+      margin-bottom: 40px;
+    }
+
+    .p {
+      height: 200px;
+    }
+
+    .p1 {
+      background-image: url('../images/p1.jpg');
+      margin-bottom: 15px;
+    }
+
+    .p2 {
+      background-image: url('../images/p2.jpeg');
+      margin-bottom: 15px;
+    }
+
+    .p3 {
+      background-image: url('../images/p3.jpg');
+    }
+
+    #technology-container {
+      padding-top: 100px;
+      text-align: center;
+      width: 100%;
+    }
+
+    .tech {
+      height: 600px;
+      width: 40%;
+      background-color: #a6feff;
+      line-height: 1.8;
+      display: inline-block;
+      margin: 25px;
+    }
+
+    .tech-images {
+      width: 100%;
+      height: 37%;
+    }
+
+    .tech-title {
+      font-weight: bold;
+      margin-bottom: 5px;
+      margin-top: 5px;
+      color: black;
+    }
+
+    .button {
+      background-color: red;
+      padding: 10px 60px;
+      text-decoration: none;
+      color: #fff;
+      line-height: 1.5;
+      border-radius: 4px;
+      text-align: center;
+    }
+
+    .button:hover {
+      background-color: #3e8e41;
+      animation-direction: alternate;
+    }
+
+    #contact-container {
+      text-align: center;
+      padding-top: 93px;
+    }
+
+    #contact-title {
+      margin-bottom: 20px;
+    }
+
+    #contact-details {
+      background-color: #40a794;
+      height: 150px;
+      text-align: center;
+      text-decoration: none;
+    }
+
+    #copyright-titile{
+      color: black;
+    }
+    }
+    @media screen and (max-width: 1080px){
+      p {
+      margin-bottom: 15px;
+      padding: 5px;
+      color: #595259;
+      font-size: 20px;
+      overflow: auto;
+    }
+      #container {
+      /* width: 95%; */
+      margin: 0px;
+      padding: 0px;
+    }
+    #header {
+      background-color: rgb(207, 219, 37);
+      display: block;
+      justify-content: center;
+      position: fixed;
+      top: 0;
+      width: 100%;
+      overflow: hidden;
+    }
+
+    .nav {
+      text-decoration: none;
+      color: #fff;
+      display: inline-block;
+      text-align: center;
+      /* padding-left: 70px;
+      padding-right: 60px;
+      padding-top: 18px;
+      padding-bottom: 18px; 
+      padding: 20px;*/
+      width: 100%;
+      background-color: rgb(207, 219, 37);
+    }
+
+    .nav:hover {
+      background-color: white;
+      color: black;
+    }
+    #section1{
+      margin-top: 260px;
+      height: 100px;
+    }
+
+    #practical-title {
+      background-image: url('../images/header.jpg');
+      height: 450px;
+      text-align: center;
+      background-size: 100%;
+      background-position: 50%;
+      background-repeat: no-repeat;
+
+    }
+
+    h1 {
+      font-size: 4rem;
+      color: #fff;
+      padding: 20px;
+    }
+
+    #team-members-container {
+      text-align: center;
+      padding-top: 100px;
+      width: 100%;
+    }
+
+    .person-image {
+      width: 300px;
+      height: 300px;
+      border-radius: 50%;
+      background-color: #a6feff;
+      display: inline-block;
+      padding: 30px;
+      margin: 30px 10px 0px 10px;
+    }
+
+    #about-container {
+      text-align: center;
+      padding-top: 80px;
+    }
+
+    #about-container::after {
+      content: '';
+      display: block;
+      clear: both;
+    }
+
+    #about-left {
+      width: 96%;
+      height: 600px;
+      background-color: #e97171;
+      color: #fff;
+      padding: 15px;
+      float: left;
+      text-align: justify;
+      line-height: 2.5;
+    }
+
+    #about-right {
+      float: right;
+      width: 100%;
+      height: 600px;
+      text-align: center;
+    }
+
+    h3 {
+      font-size: 2.7rem;
+      margin-top: 40px;
+      margin-bottom: 40px;
+    }
+
+    .p {
+      height: 200px;
+    }
+
+    .p1 {
+      background-image: url('../images/p1.jpg');
+      margin-bottom: 15px;
+    }
+
+    .p2 {
+      background-image: url('../images/p2.jpeg');
+      margin-bottom: 15px;
+    }
+
+    .p3 {
+      background-image: url('../images/p3.jpg');
+    }
+
+    #technology-container {
+      padding-top: 100px;
+      text-align: center;
+      width: 100%;
+    }
+
+    .tech {
+      height: 620px;
+      width: 40%;
+      background-color: #a6feff;
+      line-height: 1.8;
+      display: inline-block;
+      margin: 25px;
+    }
+
+    .tech-images {
+      width: 100%;
+      height: 37%;
+    }
+
+    .tech-title {
+      font-weight: bold;
+      margin-bottom: 5px;
+      margin-top: 5px;
+      color: black;
+    }
+
+    .button {
+      background-color: red;
+      padding: 10px 60px;
+      text-decoration: none;
+      color: #fff;
+      line-height: 1.5;
+      border-radius: 4px;
+      text-align: center;
+    }
+
+    .button:hover {
+      background-color: #3e8e41;
+      animation-direction: alternate;
+    }
+
+    #contact-container {
+      text-align: center;
+      padding-top: 93px;
+    }
+
+    #contact-title {
+      margin-bottom: 20px;
+    }
+
+    #contact-details {
+      background-color: #40a794;
+      height: 150px;
+      text-align: center;
+      text-decoration: none;
+    }
+
+    #copyright-titile{
+      color: black;
+    }
+    }
+
+
+    @media screen and (max-width: 680px)
+    {
+      p {
+      margin-bottom: 15px;
+      padding: 5px;
+      color: #595259;
+      font-size: 20px;
+      overflow: auto;
+    }
+      #container {
+      /* width: 95%; */
+      margin: 0px;
+      padding: 0px;
+    }
+    #header {
+      background-color: rgb(207, 219, 37);
+      display: block;
+      justify-content: center;
+      position: fixed;
+      top: 0;
+      width: 100%;
+      overflow: hidden;
+    }
+
+    .nav {
+      text-decoration: none;
+      color: #fff;
+      display: inline-block;
+      text-align: center;
+      /* padding-left: 70px;
+      padding-right: 60px;
+      padding-top: 18px;
+      padding-bottom: 18px; 
+      padding: 20px;*/
+      width: 100%;
+      background-color: rgb(207, 219, 37);
+    }
+
+    .nav:hover {
+      background-color: white;
+      color: black;
+    }
+    #section1{
+      margin-top: 260px;
+      height: 100px;
+    }
+
+    #practical-title {
+      background-image: url('../images/header.jpg');
+      height: 350px;
+      text-align: center;
+      background-size: cover;
+      background-repeat: no-repeat;
+
+    }
+
+    h1 {
+      font-size: 4rem;
+      color: #fff;
+      padding: 20px;
+    }
+
+    #team-members-container {
+      text-align: center;
+      padding-top: 100px;
+      width: 100%;
+    }
+
+    .person-image {
+      width: 350px;
+      height: 350px;
+      border-radius: 50%;
+      background-color: #a6feff;
+      display: inline-block;
+      padding: 30px;
+      margin: 30px 10px 0px 10px;
+    }
+
+    #about-container {
+      text-align: center;
+      padding-top: 80px;
+    }
+
+    #about-container::after {
+      content: '';
+      display: block;
+      clear: both;
+    }
+
+    #about-left {
+      width: 94%;
+      height: 600px;
+      background-color: #e97171;
+      color: #fff;
+      padding: 15px;
+      float: left;
+      text-align: justify;
+      line-height: 2.5;
+    }
+
+    #about-right {
+      float: right;
+      width: 100%;
+      height: 600px;
+      text-align: center;
+    }
+
+    h3 {
+      font-size: 2.7rem;
+      margin-top: 40px;
+      margin-bottom: 40px;
+    }
+
+    .p {
+      height: 200px;
+    }
+
+    .p1 {
+      background-image: url('../images/p1.jpg');
+      margin-bottom: 15px;
+    }
+
+    .p2 {
+      background-image: url('../images/p2.jpeg');
+      margin-bottom: 15px;
+    }
+
+    .p3 {
+      background-image: url('../images/p3.jpg');
+    }
+
+    #technology-container {
+      padding-top: 100px;
+      text-align: center;
+      width: 100%;
+    }
+
+    .tech {
+      height: 620px;
+      width: 50%;
+      background-color: #a6feff;
+      line-height: 1.8;
+      display: inline-block;
+      margin: 25px;
+    }
+
+    .tech-images {
+      width: 100%;
+      height: 37%;
+    }
+
+    .tech-title {
+      font-weight: bold;
+      margin-bottom: 5px;
+      margin-top: 5px;
+      color: black;
+    }
+
+    .button {
+      background-color: red;
+      padding: 10px 60px;
+      text-decoration: none;
+      color: #fff;
+      line-height: 1.5;
+      border-radius: 4px;
+      text-align: center;
+    }
+
+    .button:hover {
+      background-color: #3e8e41;
+      animation-direction: alternate;
+    }
+
+    #contact-container {
+      text-align: center;
+      padding-top: 93px;
+    }
+
+    #contact-title {
+      margin-bottom: 20px;
+    }
+
+    #contact-details {
+      background-color: #40a794;
+      height: 150px;
+      text-align: center;
+      text-decoration: none;
+    }
+
+    #copyright-titile{
+      color: black;
+    }
+}
   </style>
 </body>
 
