--- a/pages/test.html
+++ b/pages/test.html
@@ -6,7 +6,8 @@
     <title>Document</title>
 </head>
 <body>
-    <div class="header">
+    <div class="Container">
+        <div class="header">
             <ul>
             <li><a href="">HOME</a></li>
             <li><a href="">ABOUT US</a></li>
@@ -15,23 +16,28 @@
             <li><a href="">CONTACT</a></li>
         </ul>
     </div>
-    <div
-    ><h1>hello world</h1>
+    <div>
+        <h1>hello world</h1>
     <img class="header1" src="../images/header.jpg" alt="header-image">
     </div>
+
+    </div>
+    
     <style>
         body{
             margin: 0;
             padding: 0;
+            background-color: aquamarine;
         }
         a{
             text-decoration: none;
         }
         li{
             display: inline-block;
-            width: 19.7%;
+            width: fit-content;
             text-align: center;
-            padding: 10px 0px;
+            padding: 20px;
+            float: right;
         }
         li:hover{
             background-color: lemonchiffon;
@@ -55,6 +61,9 @@
             width: 90%;
             margin: 10px;
 
+        }
+        .container{
+            padding: 40;
         }
     </style>
 </body>
