--- a/pages/test.html
+++ b/pages/test.html
@@ -36,9 +36,7 @@
             display: inline-block;
             width: fit-content;
             text-align: center;
-            padding: 20px;
-            float: right;
-        }
+            padding: 20px;        }
         li:hover{
             background-color: lemonchiffon;
         }
