--- a/pages/practical-4.html
+++ b/pages/practical-4.html
@@ -36,6 +36,7 @@
       <li>Practical-7:- Create a Web Page Layout using div tags. <a href="../pages/practical-7.html">Practical-7</a></li>
       <li>Practical-8:- Create a Web Page Layout using div tags and navigation bar. <a href="../pages/practical-8.html">Practical-8</a></li>
       <li>Practical-9:- Create a Responsive Web Page Layout using div tags and navigation bar.<a href="../pages/practical-9.html">Practical-9</a></li>
+      <li>Practical-10:- Create a Responsive Side-Bar Navigation Menu.<a href="../pages/practical-10.html">Practical-9</a></li>
 
     </ol>
 </body>
