--- a/index.html
+++ b/index.html
@@ -38,6 +38,9 @@
       <li>Practical-8:- Create a Web Page Layout using div tags and navigation bar. <a href="pages/practical-8.html">Practical-8</a></li>
       <li>Practical-9:- Create a Responsive Web Page Layout using div tags and navigation bar.<a href="pages/practical-9.html">Practical-9</a></li>
       <li>Practical-10:- Create a Responsive Side-Bar Navigation Menu.<a href="pages/practical-10.html">Practical-10</a></li>
+      <li>Practical-11:- Create a Table that represent Live Practical Book Records.<a href="pages/practical-11.html">Practical-11</a></li>
+      <li>Practical-12:-Create a Custom Price Table Template.<a href="pages/practical-12.html">Practical-12</a></li>
+
 
 
   </ol>
