--- a/index.html
+++ b/index.html
@@ -40,6 +40,8 @@
       <li>Practical-10:- Create a Responsive Side-Bar Navigation Menu.<a href="pages/practical-10.html">Practical-10</a></li>
       <li>Practical-11:- Create a Table that represent Live Practical Book Records.<a href="pages/practical-11.html">Practical-11</a></li>
       <li>Practical-12:-Create a Custom Price Table Template.<a href="pages/practical-12.html">Practical-12</a></li>
+      <li>Practical-13:-Create a Responsive Footer Template.<a href="pages/practical-13.html">Practical-13</a></li>
+
 
 
 
