--- a/pages/practical-4.html
+++ b/pages/practical-4.html
@@ -41,6 +41,8 @@
       <li>Practical-12:-Create a Custom Price Table Template.<a href="../pages/practical-12.html">Practical-12</a></li>
       <li>Practical-13:-Create a Responsive Footer Template.<a href="../pages/practical-13.html">Practical-13</a></li>
       <li>Practical-14:-Create Login Form with different Templates.<a href="../pages/practical-14.html">Practical-14</a></li>
+      <li>Practical-15:-Create a Counter Page using JavaScript as per the attached Templates.<a href="../pages/practical-15.html">Practical-15</a></li>
+
 
 
 
