--- a/index.html
+++ b/index.html
@@ -43,6 +43,8 @@
       <li>Practical-13:-Create a Responsive Footer Template.<a href="pages/practical-13.html">Practical-13</a></li>
       <li>Practical-14:-Create Login Form with different Templates.<a href="pages/practical-14.html">Practical-14</a></li>
       <li>Practical-15:-Create a Counter Page using JavaScript as per the attached Templates.<a href="pages/practical-15.html">Practical-15</a></li>
+      <li>Practical-16:-Create a To-do List using JavaScript.<a href="pages/practical-16.html">Practical-16</a></li>
+      <li>Practical-17:-Create a Page with Live Clock with Dynamic Greeting Background and Data Stored in Browser Local Storage.<a href="pages/practical-17.html">Practical-17</a></li>
 
 
 
