--- a/index.html
+++ b/index.html
@@ -45,6 +45,7 @@
       <li>Practical-15:-Create a Counter Page using JavaScript as per the attached Templates.<a href="pages/practical-15.html">Practical-15</a></li>
       <li>Practical-16:-Create a To-do List using JavaScript.<a href="pages/practical-16.html">Practical-16</a></li>
       <li>Practical-17:-Create a Page with Live Clock with Dynamic Greeting Background and Data Stored in Browser Local Storage.<a href="pages/practical-17.html">Practical-17</a></li>
+      <li>Practical-18:-Create an HTML Form and Validate it with Javascript (Client-side Programming Language).<a href="pages/practical-18.html">Practical-18</a></li>
 
 
 
