--- a/index.html
+++ b/index.html
@@ -46,6 +46,8 @@
       <li>Practical-16:-Create a To-do List using JavaScript.<a href="pages/practical-16.html">Practical-16</a></li>
       <li>Practical-17:-Create a Page with Live Clock with Dynamic Greeting Background and Data Stored in Browser Local Storage.<a href="pages/practical-17.html">Practical-17</a></li>
       <li>Practical-18:-Create an HTML Form and Validate it with Javascript (Client-side Programming Language).<a href="pages/practical-18.html">Practical-18</a></li>
+      <li>Practical-19:-Create an HTML page with Multi-Step Form.<a href="pages/practical-19.html">Practical-19</a></li>
+      <li>Practical-20:-Create a Responsive Layout using Bootstrap Grid System. <a href="pages/practical-20.html">Practical-20</a></li>
 
 
 
